--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,5 +1,8 @@
 .App {
   height: 100vh;
-  background-color: hsl(217, 19%, 24%);
+  background-color: hsl(218, 23%, 16%);
   font-family: 'Manrope', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
