vars/mixins setup + responsive wip

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,13 @@
+@import '../../styles/mixins';
+@import '../../styles/vars';
+
+html,body {
+  margin: auto;
+}
+
 .App {
   height: 100vh;
-  background-color: hsl(218, 23%, 16%);
+  background-color: $black;
   font-family: 'Manrope', sans-serif;
   display: flex;
   justify-content: center;
